<!--
    Name: Malcolm Busari
    Student No: 991523264
    Section: 1211_34780
-->
<resources>
    <string name="app_name">MalcolmBusari991523264</string>
    <string name="select_your_favorite_pizza_restaurant">Select your favorite pizza restaurant:</string>
    <string name="pizzaPlaceOption1">Domino\'s Pizza</string>
    <string name="pizzaPlaceOption2">Pizza Hut</string>
    <string name="pizzaPlaceOption3">Pizza Pizza</string>
    <string name="nextBtn">Next</string>
    <string name="choose_your_size">Choose your size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="choose_your_crust">Choose your crust</string>
    <string name="thin">Thin</string>
    <string name="thick">Thick</string>
    <string name="pan">Pan</string>
    <string name="choose_your_toppings">Choose your toppings</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="chicken">Chicken</string>
    <string name="ground_beef">Ground Beef</string>
    <string name="mushroom">Mushroom</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="onion">Onion</string>
    <string name="help">Help</string>
    <string name="malcolm">Malcolm</string>
    <string name="pizza">Pizza</string>
    <string name="here_is_your_order">Here is your order:</string>
    <string name="order">Order</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_details">Order Details</string>
    <string name="back_to_home_screen">Home Screen</string>
</resources>