<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaHutActivity">

    <ImageView
        android:id="@+id/malcolmIV"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="292dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/pizzahut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/sizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="236dp"
        android:text="@string/choose_your_size"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <RadioGroup
        android:id="@+id/sizeRG"
        android:layout_width="151dp"
        android:layout_height="140dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/smallRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"></RadioButton>

        <RadioButton
            android:id="@+id/mediumRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"></RadioButton>

        <RadioButton
            android:id="@+id/largeRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/crustTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="232dp"
        android:text="@string/choose_your_crust"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <RadioGroup
        android:id="@+id/crustRG"
        android:layout_width="148dp"
        android:layout_height="142dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/thinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thin"></RadioButton>

        <RadioButton
            android:id="@+id/thickRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thick"></RadioButton>

        <RadioButton
            android:id="@+id/panRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/toppingsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="112dp"
        android:text="@string/choose_your_toppings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <CheckBox
        android:id="@+id/pepperoniCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="200dp"
        android:text="@string/pepperoni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/chickenCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="308dp"
        android:text="@string/chicken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/beefCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="56dp"
        android:text="@string/ground_beef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/pepperCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="180dp"
        android:text="@string/green_pepper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/onionCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="320dp"
        android:text="@string/onion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/mushroomCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="64dp"
        android:text="@string/mushroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <Button
        android:id="@id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/nextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>