<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MalcolmActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:layout_marginBottom="247dp"
        android:text="@string/select_your_favorite_pizza_restaurant"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/pizzahutImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="176dp"
        android:layout_height="192dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/dominos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizzaPlaceOption1"></RadioButton>

        <RadioButton
            android:id="@+id/pizzahut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizzaPlaceOption2"></RadioButton>

        <RadioButton
            android:id="@+id/pizzapizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizzaPlaceOption3"></RadioButton>
    </RadioGroup>

    <ImageView
        android:id="@+id/dominosImg"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="316dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/dominos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/pizzahutImg"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="316dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/pizzahut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/pizzapizzaImg"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="316dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/pizzapizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/nextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>